--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Har du en lang skoledag, og har du brug for noget til at komme igennem den? Så hop ind på skole snus. Fede deals på snus, smøger og andet nikotin."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
